--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rails-app-new",
+  "name": "rails-app-vue3",
   "private": true,
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
