--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "pinia": "^2.1.6",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "turbolinks": "^5.2.0",
