--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.3.3",
     "turbolinks": "^5.2.0",
     "vue": "^3.3.4",
+    "vue-router": "4",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
